--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - 'feature/*'
       - 'hotfix/*'
+  pull_request:
+    types: [closed]
+    branches:
+      - develop
   workflow_dispatch:
 
 env:
@@ -207,79 +211,48 @@ jobs:
     secrets: inherit
 
   versioning:
-    needs: [check-skip, create-pr]
-    if: needs.check-skip.outputs.should_skip == 'false'
+    needs: [check-skip, auto-merge]
+    if: |
+      github.event_name == 'pull_request' &&
+      github.event.action == 'closed' &&
+      github.event.pull_request.merged == true &&
+      github.event.pull_request.base.ref == 'develop'
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.set-version.outputs.version }}
     steps:
-      - name: Checkout code
+      - name: Checkout develop branch
         uses: actions/checkout@v4
         with:
+          ref: develop
           token: ${{ secrets.PAT_TOKEN }}
-          fetch-depth: 0
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Extract branch name
-        id: branch-names
+      - name: Determine version bump type
+        id: bump-type
         run: |
-          BRANCH_NAME=$(echo "${{ github.ref }}" | sed 's/refs\/heads\///')
-          echo "current_branch=$BRANCH_NAME" >> $GITHUB_OUTPUT
-
-      - name: Update version [minor]
-        if: startsWith(steps.branch-names.outputs.current_branch, 'feature')
-        run: |
-          python ${{ env.VERSION_UP }} ${{ env.NAME_VERSION_FILE }} ${{ env.MINOR }}
-          VERSION=$(cat ${{ env.NAME_VERSION_FILE }})
-          echo "NEW_VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Update version [patch]
-        if: startsWith(steps.branch-names.outputs.current_branch, 'hotfix')
-        run: |
-          python ${{ env.VERSION_UP }} ${{ env.NAME_VERSION_FILE }} ${{ env.PATCH }}
-          VERSION=$(cat ${{ env.NAME_VERSION_FILE }})
-          echo "NEW_VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Get commit messages
-        id: commit
-        run: |
-          if [ -f .last_commit ]; then
-            PREV_COMMIT=$(cat .last_commit)
-          else
-            PREV_COMMIT=$(git rev-parse HEAD~1)
+          if [[ "${{ github.event.pull_request.head.ref }}" == feature/* ]]; then
+            echo "BUMP_TYPE=minor" >> $GITHUB_ENV
+          elif [[ "${{ github.event.pull_request.head.ref }}" == hotfix/* ]]; then
+            echo "BUMP_TYPE=patch" >> $GITHUB_ENV
           fi
-          COMMIT_MSG=$(git log ${PREV_COMMIT}..HEAD --pretty=format:"- %s")
-          echo "message<<EOF" >> $GITHUB_OUTPUT
-          echo "$COMMIT_MSG" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          git rev-parse HEAD > .last_commit
 
-      - name: Update Changelog
-        if: env.NEW_VERSION != ''
+      - name: Update version
         run: |
-          TIMESTAMP=$(date '+%d.%m.%Y %H:%M:%S')
-          CHANGELOG_FILE="changelog.md"
-          if [ ! -f "$CHANGELOG_FILE" ]; then
-            echo "# Changelog" > $CHANGELOG_FILE
-            echo "" >> $CHANGELOG_FILE
-          fi
-          echo "## [${{ env.NEW_VERSION }}] - $TIMESTAMP" >> $CHANGELOG_FILE
-          echo "" >> $CHANGELOG_FILE
-          echo "${{ steps.commit.outputs.message }}" >> $CHANGELOG_FILE
-          echo "" >> $CHANGELOG_FILE
+          python ${{ env.VERSION_UP }} ${{ env.NAME_VERSION_FILE }} ${{ env.BUMP_TYPE }}
+          echo "NEW_VERSION=$(cat ${{ env.NAME_VERSION_FILE }})" >> $GITHUB_ENV
 
-      - name: Commit version and changelog
-        if: env.NEW_VERSION != ''
+      - name: Commit version changes
         run: |
-          git config user.name "GitHub Action"
-          git config user.email "action@github.com"
-          git add ${{ env.NAME_VERSION_FILE }} version/version_log changelog.md .last_commit
-          git commit -m "Bump version to ${{ env.NEW_VERSION }} and update changelog [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }} --force
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add ${{ env.NAME_VERSION_FILE }} version/version_log
+          git commit -m "Bump version to ${{ env.NEW_VERSION }} [skip ci]"
+          git push origin develop
 
       - name: Set version output
         id: set-version
@@ -491,17 +464,14 @@ jobs:
             }
 
   docker-push:
-    needs: [check-skip, test-notify]
-    if: needs.check-skip.outputs.should_skip == 'false'
+    needs: [versioning]
+    if: github.event.pull_request.merged == true
     permissions:
       contents: read
       packages: write
       id-token: write
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -514,7 +484,7 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:new
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:${{ needs.versioning.outputs.version }}
             ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:latest
           push: true
 
@@ -524,21 +494,9 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:new
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:${{ needs.versioning.outputs.version }}
             ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:latest
           push: true
-
-      - name: Send Telegram notification - Docker Push Completed
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
-          MESSAGE="Docker образы успешно загружены%0AВерсия: ${{ needs.test-notify.outputs.version }}%0AПроект: ${{ github.repository }}"
-          curl -s -X POST \
-            https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id=${TELEGRAM_CHAT_ID} \
-            -d text="$MESSAGE" \
-            -d parse_mode="HTML"
 
       - name: Add label "dockerhub"
         if: success()
