--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,13 +1,10 @@
 name: Test and Notify
-#test
+
 on:
   push:
     branches:
       - 'feature/*'
       - 'hotfix/*'
-  pull_request:
-    types: [closed]
-    branches: [develop]
   workflow_dispatch:
 
 env:
@@ -24,7 +21,7 @@ jobs:
       should_skip: ${{ steps.check-commit.outputs.should_skip }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Добавляем checkout репозитория
 
       - name: Check commit message
         id: check-commit
@@ -210,55 +207,86 @@ jobs:
     secrets: inherit
 
   versioning:
-    if: |
-      (github.event_name == 'pull_request' &&
-      github.event.action == 'closed' &&
-      github.event.pull_request.merged == true &&
-      github.event.pull_request.base.ref == 'develop')
-      
-    runs-on: ubuntu-latest      
+    needs: [check-skip, create-pr]
+    if: needs.check-skip.outputs.should_skip == 'false'
+    runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.set-version.outputs.version }}
     steps:
-      - name: Checkout develop branch
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: develop
           token: ${{ secrets.PAT_TOKEN }}
+          fetch-depth: 0
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Determine version bump type
-        id: bump-type
+      - name: Extract branch name
+        id: branch-names
         run: |
-          if [[ "${{ github.event.pull_request.head.ref }}" == feature/* ]]; then
-            echo "BUMP_TYPE=minor" >> $GITHUB_ENV
-          elif [[ "${{ github.event.pull_request.head.ref }}" == hotfix/* ]]; then
-            echo "BUMP_TYPE=patch" >> $GITHUB_ENV
+          BRANCH_NAME=$(echo "${{ github.ref }}" | sed 's/refs\/heads\///')
+          echo "current_branch=$BRANCH_NAME" >> $GITHUB_OUTPUT
+
+      - name: Update version [minor]
+        if: startsWith(steps.branch-names.outputs.current_branch, 'feature')
+        run: |
+          python ${{ env.VERSION_UP }} ${{ env.NAME_VERSION_FILE }} ${{ env.MINOR }}
+          VERSION=$(cat ${{ env.NAME_VERSION_FILE }})
+          echo "NEW_VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Update version [patch]
+        if: startsWith(steps.branch-names.outputs.current_branch, 'hotfix')
+        run: |
+          python ${{ env.VERSION_UP }} ${{ env.NAME_VERSION_FILE }} ${{ env.PATCH }}
+          VERSION=$(cat ${{ env.NAME_VERSION_FILE }})
+          echo "NEW_VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Get commit messages
+        id: commit
+        run: |
+          if [ -f .last_commit ]; then
+            PREV_COMMIT=$(cat .last_commit)
+          else
+            PREV_COMMIT=$(git rev-parse HEAD~1)
           fi
+          COMMIT_MSG=$(git log ${PREV_COMMIT}..HEAD --pretty=format:"- %s")
+          echo "message<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMIT_MSG" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+          git rev-parse HEAD > .last_commit
 
-      - name: Update version
+      - name: Update Changelog
+        if: env.NEW_VERSION != ''
         run: |
-          python ${{ env.VERSION_UP }} ${{ env.NAME_VERSION_FILE }} ${{ env.BUMP_TYPE }}
-          echo "NEW_VERSION=$(cat ${{ env.NAME_VERSION_FILE }})" >> $GITHUB_ENV
+          TIMESTAMP=$(date '+%d.%m.%Y %H:%M:%S')
+          CHANGELOG_FILE="changelog.md"
+          if [ ! -f "$CHANGELOG_FILE" ]; then
+            echo "# Changelog" > $CHANGELOG_FILE
+            echo "" >> $CHANGELOG_FILE
+          fi
+          echo "## [${{ env.NEW_VERSION }}] - $TIMESTAMP" >> $CHANGELOG_FILE
+          echo "" >> $CHANGELOG_FILE
+          echo "${{ steps.commit.outputs.message }}" >> $CHANGELOG_FILE
+          echo "" >> $CHANGELOG_FILE
 
-      - name: Commit version changes
+      - name: Commit version and changelog
+        if: env.NEW_VERSION != ''
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add ${{ env.NAME_VERSION_FILE }} version/version_log
-          git commit -m "Bump version to ${{ env.NEW_VERSION }} [skip ci]"
-          git push origin develop
+          git config user.name "GitHub Action"
+          git config user.email "action@github.com"
+          git add ${{ env.NAME_VERSION_FILE }} version/version_log changelog.md .last_commit
+          git commit -m "Bump version to ${{ env.NEW_VERSION }} and update changelog [skip ci]" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }} --force
 
       - name: Set version output
         id: set-version
         run: echo "version=${{ env.NEW_VERSION }}" >> $GITHUB_OUTPUT
 
   test-notify:
-    needs: [check-skip, create-pr, frontend-tests, backend-tests, antivirus-tests, sonar-analysis]
+    needs: [check-skip, create-pr, frontend-tests, backend-tests, antivirus-tests, sonar-analysis, versioning]
     if: needs.check-skip.outputs.should_skip == 'false'
     runs-on: ubuntu-latest
     outputs:
@@ -365,10 +393,8 @@ jobs:
           secure: true
 
   auto-merge:
-    needs: [check-skip, create-pr, test-notify, sonar-analysis, versioning]
-    if: |
-      needs.check-skip.outputs.should_skip == 'false' &&
-      needs.test-notify.outputs.test_status == 'success'
+    needs: [check-skip, create-pr, test-notify, sonar-analysis]
+    if: always() && needs.check-skip.outputs.should_skip == 'false'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -465,16 +491,17 @@ jobs:
             }
 
   docker-push:
-    needs: [versioning, test-notify]
-    if: |
-      needs.versioning.result == 'success' &&
-      needs.test-notify.outputs.test_status == 'success'
+    needs: [check-skip, test-notify]
+    if: needs.check-skip.outputs.should_skip == 'false'
     permissions:
       contents: read
       packages: write
       id-token: write
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -487,7 +514,7 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:${{ needs.versioning.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:new
             ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:latest
           push: true
 
@@ -497,10 +524,10 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:${{ needs.versioning.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:new
             ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:latest
           push: true
-          
+
       - name: Send Telegram notification - Docker Push Completed
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
@@ -531,9 +558,7 @@ jobs:
 
   deploy-dev:
     needs: [check-skip, auto-merge, docker-push]
-    if: |
-      needs.auto-merge.result == 'success' &&
-      needs.docker-push.result == 'success'
+    if: always() && needs.check-skip.outputs.should_skip == 'false'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
