--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -366,8 +366,76 @@ jobs:
             ${{ env.MESSAGE }}
           secure: true
 
+  docker-push:
+    needs: [check-skip, test-notify, versioning]
+    if: needs.check-skip.outputs.should_skip == 'false'
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build and push backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          tags: |
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:new
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:v${{ needs.versioning.outputs.version }}
+          push: true
+
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          tags: |
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:new
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:v${{ needs.versioning.outputs.version }}
+          push: true
+
+      - name: Send Telegram notification - Docker Push Completed
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          MESSAGE="Docker образы успешно загружены%0AВерсия: ${{ needs.versioning.outputs.version }}%0AПроект: ${{ github.repository }}"
+          curl -s -X POST \
+            https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id=${TELEGRAM_CHAT_ID} \
+            -d text="$MESSAGE" \
+            -d parse_mode="HTML"
+
+      - name: Add label "dockerhub"
+        if: success()
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const pullNumber = "${{ needs.create-pr.outputs.pr_number }}";
+            if (pullNumber) {
+              await github.rest.issues.addLabels({
+                issue_number: pullNumber,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                labels: ["dockerhub"]
+              });
+            }
+
   auto-merge:
-    needs: [check-skip, create-pr, test-notify, sonar-analysis]
+    needs: [check-skip, create-pr, test-notify, sonar-analysis, docker-push]
     if: always() && needs.check-skip.outputs.should_skip == 'false'
     runs-on: ubuntu-latest
     permissions:
@@ -384,6 +452,11 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
+      - name: Create Git Tag
+        run: |
+          git tag v${{ needs.versioning.outputs.version }}
+          git push origin v${{ needs.versioning.outputs.version }}
 
       - name: Force Merge Feature Branch into Develop Locally
         env:
@@ -461,72 +534,6 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 labels: ["PROD"]
-              });
-            }
-
-  docker-push:
-    needs: [check-skip, test-notify, versioning]
-    if: needs.check-skip.outputs.should_skip == 'false'
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          file: ./backend/Dockerfile
-          tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:new
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:latest
-          push: true
-
-      - name: Build and push frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
-          tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:new
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:latest
-          push: true
-
-      - name: Send Telegram notification - Docker Push Completed
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
-          MESSAGE="Docker образы успешно загружены%0AВерсия: ${{ needs.versioning.outputs.version }}%0AПроект: ${{ github.repository }}"
-          curl -s -X POST \
-            https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id=${TELEGRAM_CHAT_ID} \
-            -d text="$MESSAGE" \
-            -d parse_mode="HTML"
-
-      - name: Add label "dockerhub"
-        if: success()
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const pullNumber = "${{ needs.create-pr.outputs.pr_number }}";
-            if (pullNumber) {
-              await github.rest.issues.addLabels({
-                issue_number: pullNumber,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                labels: ["dockerhub"]
               });
             }
 
